terraform/v2-EC2_with_SG/v2-ec2_with_sg.tf
provider "aws" {
  region = "us-east-1"
  profile = "default"
}

resource "aws_instance" "ec2" {
    ami = "ami-02396cdd13e9a1257"
    instance_type = "t2.micro"
    key_name = "mac-rtp-03"
    security_groups = ["rtp03-sg"]
}

resource "aws_security_group" "rtp03-sg" {
    name = "rtp03-sg"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]

    }
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]

    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "ssh-sg"

    }

}
